@startuml

title __SERVICE's Class Diagram__\n

  namespace  {
    namespace k.posam.blog {
      namespace service {
        class sk.posam.blog.service.AuthService {
            - authenticationManager : AuthenticationManager
            - passwordEncoder : PasswordEncoder
            + getCurrentUser()
            + login()
            + register()
            - encodePassword()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace service {
        class sk.posam.blog.service.AuthenticationResponse {
            - authenticationToken : String
            - username : String
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace service {
        class sk.posam.blog.service.CommentService {
            + addComment()
            + delete()
            + getAllPostComments()
            - mapFromCommentToDto()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace service {
        class sk.posam.blog.service.FileUploadService {
            + uploadFile()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace service {
        class sk.posam.blog.service.PostService {
            + createPost()
            + delete()
            + editPost()
            + getPost()
            + getUserPosts()
            + showAllPosts()
            - mapFromDtoToPost()
            - mapFromPostToDto()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace service {
        class sk.posam.blog.service.UserDetailsServiceImpl {
            + loadUserByUsername()
            - getAuthorities()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace service {
        class sk.posam.blog.service.UserService {
            + editUser()
            + getAllUsers()
            + getUser()
            - mapFromUserToUserDto()
        }
      }
    }
  }
  

  sk.posam.blog.service.AuthService o-- sk.posam.blog.security.JwtProvider : jwtProvider
  sk.posam.blog.service.AuthService o-- sk.posam.blog.repository.UserRepository : userRepository
  sk.posam.blog.service.CommentService o-- sk.posam.blog.repository.CommentRepository : commentRepository
  sk.posam.blog.service.CommentService o-- sk.posam.blog.repository.PostRepository : postRepository
  sk.posam.blog.service.CommentService o-- sk.posam.blog.repository.UserRepository : userRepository
  sk.posam.blog.service.PostService o-- sk.posam.blog.service.AuthService : authService
  sk.posam.blog.service.PostService o-- sk.posam.blog.repository.PostRepository : postRepository
  sk.posam.blog.service.PostService o-- sk.posam.blog.repository.UserRepository : userRepository
  sk.posam.blog.service.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  sk.posam.blog.service.UserDetailsServiceImpl o-- sk.posam.blog.repository.UserRepository : userRepository
  sk.posam.blog.service.UserService o-- sk.posam.blog.repository.PostRepository : postRepository
  sk.posam.blog.service.UserService o-- sk.posam.blog.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
